--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
-$font-family-main: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-size: 1.25em;
+$font-family-main: 'Helvetica', Source Sans Pro, Arial, sans-serif;
+$font-family-headings: 'Helvetica', Helvetica, Arial, sans-serif;
+$font-size: 1.1em;
 
 // Padding
 $padding-large: 20%;
